Atualiza métodos de solicitação: inclui observação do responsável, refatora entidade e ajusta DTOs